--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>TOP Landing Page</title>
 </head>
 <body>
@@ -32,13 +33,13 @@
     <h1 class="mid-title">Some random information</h1>
 
     <div class="info-section">
-        <div class="info-boxes"><img class="info-image" src="">this is some subtext under an illustration
+        <div class="info-boxes"><img class="info-image" src="" alt="placeholder">this is some subtext under an illustration
             or image</div>
-        <div class="info-boxes"><img class="info-image" src="">this is some subtext under an illustration
+        <div class="info-boxes"><img class="info-image" src="" alt="placeholder">this is some subtext under an illustration
             or image</div>
-        <div class="info-boxes"><img class="info-image" src="">this is some subtext under an illustration
+        <div class="info-boxes"><img class="info-image" src="" alt="placeholder">this is some subtext under an illustration
             or image</div>
-        <div class="info-boxes"><img class="info-image" src="">this is some subtext under an illustration
+        <div class="info-boxes"><img class="info-image" src="" alt="placeholder">this is some subtext under an illustration
             or image</div>
     </div>
 
@@ -55,7 +56,7 @@
             <h1 class="cta-title">Call to action! It's time!</h1>
             <p class="text">Sign up for our product by clicking that button right over there!</p>
         </div>
-        <button class="sign-up white-border">Sign Up</button>
+        <div class="button"><button class="sign-up white-border">Sign Up</button></div>
     </div>
 
     <footer>Copyright @ The Odin Project 2022</footer>
