--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
             <button class="sign-up">Sign Up</button>
         </div>
-        <img class="placeholder" src="" alt="this is a placeholder for a image">
+        <div class="placeholder"><img src="" alt="this is a placeholder for a image"></div>
     </div>
     <h1 class="mid-title">Some random information</h1>
 
@@ -56,7 +56,7 @@
             <h1 class="cta-title">Call to action! It's time!</h1>
             <p class="text">Sign up for our product by clicking that button right over there!</p>
         </div>
-        <div class="button"><button class="sign-up white-border">Sign Up</button></div>
+        <div class="button"><button class="sign-up" id="white-border">Sign Up</button></div>
     </div>
 
     <footer>Copyright @ The Odin Project 2022</footer>
