Add images and color -placeholder design finish

--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
             </p>
             <button class="sign-up">Sign Up</button>
         </div>
-        <div class="placeholder"><img src="" alt="this is a placeholder for a image"></div>
+        <div class="placeholder"></div>
     </div>
     <h1 class="mid-title">Some random information</h1>
 
     <div class="info-section">
-        <div class="info-boxes"><img class="info-image" src="" alt="placeholder">this is some subtext under an illustration
+        <div class="info-boxes"><img class="info-image" src="./images/pexels-secret-garden-931177.jpg" alt="placeholder">this is some subtext under an illustration
             or image</div>
-        <div class="info-boxes"><img class="info-image" src="" alt="placeholder">this is some subtext under an illustration
+        <div class="info-boxes"><img class="info-image" src="./images/pexels-unchalee-srirugsar-85773.jpg" alt="placeholder">this is some subtext under an illustration
             or image</div>
-        <div class="info-boxes"><img class="info-image" src="" alt="placeholder">this is some subtext under an illustration
+        <div class="info-boxes"><img class="info-image" src="./images/pexels-secret-garden-931177.jpg" alt="placeholder">this is some subtext under an illustration
             or image</div>
-        <div class="info-boxes"><img class="info-image" src="" alt="placeholder">this is some subtext under an illustration
+        <div class="info-boxes"><img class="info-image" src="./images/pexels-unchalee-srirugsar-85773.jpg" alt="placeholder">this is some subtext under an illustration
             or image</div>
     </div>
 
@@ -56,7 +56,7 @@
             <h1 class="cta-title">Call to action! It's time!</h1>
             <p class="text">Sign up for our product by clicking that button right over there!</p>
         </div>
-        <div class="button"><button class="sign-up" id="white-border">Sign Up</button></div>
+        <div class="button"><button id="white-border">Sign Up</button></div>
     </div>
 
     <footer>Copyright @ The Odin Project 2022</footer>
